# sci-fuzz

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  DESIGN_LIBAFL_UPGRADE.md  NOTES.md  PHASE1_VALIDATION.md  README.md  ROADMAP.md
artifacts/: reconciliation_handoff.md
benchmarks/plans/: default.json
docs/: next-step-fork-mode-plan.md
scripts/: bench_regression.sh  ci_smoke.sh  replay_repros.sh
src/: adaptive_scheduler.rs  benchmark.rs  benchmark_matrix.rs  bootstrap.rs  campaign.rs  cheatcodes.rs  cli.rs  config.rs  conservation.rs  conservation_oracles.rs  dependency_planner.rs  diff.rs  economic.rs  error.rs  evm.rs  feedback.rs  flashloan.rs  focused.rs  harness.rs  inferred_invariants.rs  invariant.rs  lib.rs  main.rs  mutator.rs  oracle.rs  output.rs  path_id.rs  project.rs  protocol_probes.rs  protocol_semantics.rs  role_aware.rs  rpc.rs  scoreboard.rs  sequence_templates.rs  shrinker.rs  snapshot.rs  source_map.rs  target_rank.rs  types.rs
src/concolic/: mod.rs
src/libafl_adapter/: campaign.rs  cmplog.rs  concolic.rs  input.rs  mod.rs  observer.rs  scheduler.rs
src/libafl_adapter/mutators/: mod.rs
tests/: attacker_deploy.rs  benchmark_matrix.rs  echidna_semantics.rs  efcf_benchmark.rs  harness_bootstrap.rs  multiseed_benchmark.rs  oracle_sequence_baseline.rs  phase8_validation.rs  real_target_run.rs
tests/contracts/control/: PropFalse.sol  PropMulti.sol  PropReverts.sol  PropStateful.sol
tests/contracts/control/compiled/: PropFalse.abi  PropMulti.abi  PropReverts.abi  PropStateful.abi
tests/contracts/defi-target/: Target.sol  foundry.toml
tests/contracts/efcf-compiled/: CrossFunctionToken.abi  Delegatecall.abi  ISimpleDAO.abi  IntegerOverflowConstraints.abi  SimpleDAO.abi  SimpleDAOAttacker.abi
tests/contracts/efcf-core/: SimpleDAOAttacker.sol
tests/contracts/harness_fixtures/: HarnessWithSetup.sol  RuntimeStub.sol
tests/fixtures/harness_project/: foundry.toml
